--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 							<p>Welcome to my personal website! I am Thanh Duong, an international student from Vietnam at Gettysburg College. I am studying Math and Computer Science, with an interest in Finance and Data Science. </p>
 
 							<ul class="actions">
-								<li><a href="#one" class="button">Resume</a></li>
-								<li><a href="#one" class="button scrolly">Transcript</a></li>
+								<li><a href="https://thanhqduong.github.io/website/Thanh%20Duong%20_%20Resume.pdf" class="button">Resume</a></li>
+								<li><a href="https://thanhqduong.github.io/website/Thanh%20Duong%20_%20Transcript.pdf" class="button">Transcript</a></li>
 							</ul>
 						</div>
 					</section>
